# phabricator-test

./: .gitignore  README.md  settings.gradle
camera/: build.gradle
camera/src/androidTest/java/com/andrasta/dashi/camera/: ExampleInstrumentedTest.java
camera/src/main/: AndroidManifest.xml
camera/src/main/java/com/andrasta/dashi/camera/: Camera.java  CameraConfig.java  CameraUtils.java  ImageSaver.java  ImageUtil.java
camera/src/main/java/com/andrasta/dashi/view/: AutoFitTextureView.java
camera/src/test/java/com/andrasta/dashi/camera/: ExampleUnitTest.java
dashi-app/: build.gradle
dashi-app/src/androidTest/java/com/andrasta/dashi/: ExampleInstrumentedTest.java
dashi-app/src/main/: AndroidManifest.xml
dashi-app/src/main/assets/: openalpr.conf
dashi-app/src/main/java/com/andrasta/dashi/: AlprHandler.java  AutoFitTextureView.java  DashiApplication.java  MainActivity.java  PolygonView.java  SplashActivity.java
dashi-app/src/main/java/com/andrasta/dashi/alpr/: AlprHandler.java  ImageHandler.java
dashi-app/src/main/java/com/andrasta/dashi/camera/: Camera.java  CameraUtils.java  ImageSaver.java
dashi-app/src/main/java/com/andrasta/dashi/location/: LocationHelper.java
dashi-app/src/main/java/com/andrasta/dashi/service/: LicensePlateMatcher.java
dashi-app/src/main/java/com/andrasta/dashi/view/: LaneView.java  PolygonView.java
dashi-app/src/main/res/layout/: activity_main.xml  activity_splash.xml  simple_spinner_item.xml
dashi-app/src/main/res/values/: colors.xml  strings.xml
dashi-app/src/test/java/com/andrasta/dashi/: ExampleUnitTest.java
dashi-client/: build.gradle  proguard-rules.pro
dashi-client/src/androidTest/java/com/andrasta/dashiclient/: DashiClientTest.java
dashi-client/src/main/: AndroidManifest.xml
dashi-client/src/main/java/com/andrasta/dashiclient/: DashiApi.java  LicensePlate.java
dashi-client/src/main/res/values/: strings.xml
dashi-client/src/test/java/com/andrasta/dashiclient/: ExampleUnitTest.java
openalpr/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
openalpr/src/main/: AndroidManifest.xml
openalpr/src/main/cpp/: jobject_helper.cpp  jobject_helper.h  lanedetector.cpp  lanedetector.h  lanedetector_jni.cpp  openalpr_jni.cpp  utils.cpp  utils.h  utils_jni.cpp  utils_jni.h
openalpr/src/main/java/com/andrasta/dashi/openalpr/: Alpr.java  AlprResult.java  LaneDetector.java  LaneDetectorResult.java  Plate.java  PlateResult.java  RegionOfInterest.java  RegoinOfInterest.java
openalpr/src/main/res/values/: strings.xml
tensorflow/: build.gradle
tensorflow/src/androidTest/java/com/example/tensorflow/: ExampleInstrumentedTest.java
tensorflow/src/main/: AndroidManifest.xml
tensorflow/src/main/java/com/andrasta/dashi/tensorflow/: AutoFitTextureView.java  BorderedText.java  CameraActivity.java  CameraConnectionFragment.java  Classifier.java  DetectorActivity.java  Logger.java  (+3 more)
tensorflow/src/main/res/layout/: activity_camera.xml  camera_connection_fragment.xml  camera_connection_fragment_tracking.xml
tensorflow/src/main/res/values/: strings.xml
tensorflow/src/test/java/com/example/tensorflow/: ExampleUnitTest.java
utils/: build.gradle
utils/src/main/: AndroidManifest.xml
utils_jni/: CMakeLists.txt  build.gradle  proguard-rules.pro
utils_jni/src/androidTest/java/com/andrasta/utils/jni/: ExampleInstrumentedTest.java
utils_jni/src/main/: AndroidManifest.xml
utils_jni/src/main/cpp/: utils_jni.cpp  utils_jni.h
utils_jni/src/main/res/values/: strings.xml
utils_jni/src/test/java/com/andrasta/utils/jni/: ExampleUnitTest.java
(+14 files in other folders)
